--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: julesverne
 Type: Package
 Title: Les livres de Jules Verne
 Version: 0.1.0
-Authors@R: person("Marius", "Bio", email = "maryus@live.ca", role = c("aut", "cre"))
-Maintainer: Marius Bio <maryus@live.ca>
+Authors@R: person("Marius", "Bio", email = "mariusbio07@gmail.com", role = c("aut", "cre"))
+Maintainer: Marius Bio <mariusbio07@gmail.com>
 Description: Quelques livres de Jules Verne pour des projets pratiques
     d'analyse de texte ou text mining.
 License: MIT + file LICENSE
